Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29595

Adjust variable name for slow log file and help referring to the value

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • 10.11.1
    • Variables
    • None

    Description

      Repeating the comment from MDEV-7567,

      It remains unclear what was the role-model for log_slow_query_file_name.
      We have a variety of patterns with similar meaning:
      general_log_file
      relay_log_info_file
      wsrep_status_file
      pid_file
      log_error
      log_bin_basename
      innodb_buffer_pool_filename

      but I couldn't find any %_file_name (maybe somewhere in optional plugins, those I didn't check).

      So, maybe it should be just log_slow_query_file, like several existing _file's. Or even just log_slow_file, given the variable list

      +---------------------------------+
      | log_slow_min_examined_row_limit |
      | log_slow_slave_statements       |
      | log_slow_query_time             |
      | log_slow_verbosity              |
      | log_slow_admin_statements       |
      | log_slow_disabled_statements    |
      | log_slow_query                  |
      | log_slow_query_file_name        |
      | log_slow_rate_limit             |
      | log_slow_filter                 |
      +---------------------------------+
      

      Additionally, the help text for log-basename option contains a reference to this variable/option. It was already wrong before ("log-slow-query-log-file"), and will become even wronger now, so it should be fixed at the same time.

        --log-basename=name Basename for all log files and the .pid file. This sets
                            all log file names at once (in 'datadir') and is normally
                            the only option you need for specifying log files. Sets
                            names for --log-bin, --log-bin-index, --relay-log,
                            --relay-log-index, --general-log-file,
                            --log-slow-query-log-file, --log-error-file, and
                            --pid-file
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.