MDEV-29595 Adjust variable name for slow log file and help referring to the value